# ICS0019

Homework 1/app/: README.md  app.py
Homework 1/module/: README.md  pyproject.toml  requirements.txt
Homework 1/module/src/square_x3nt1x/: app.py
Homework 1/module/test/: test_app.py
Homework 2/: README.md  orm.py  sqlite.py
Homework 3/: README.md  app.py  otselennud23.csv
Homework 4/: README.md  requirements.txt  scrapy_app.py  soap_app.py
