[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square_x3nt1x"
version = "1.0.0"
authors = [
  { name="x3nt1x", email="x3nt1x@dr.com" },
]
description = "This is a simple quadratic formula calculator package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]